--- a/app/widgets/reader/reader.hbs
+++ b/app/widgets/reader/reader.hbs
@@ -1,3 +1,4 @@
+<div data-aura-widget="toolbar@another-source-toolbar" data-aura-navigation="toolbar-navigation" data-aura-nb-page="{{nbPage}}"></div>
 <div data-aura-widget="toolbar" data-aura-navigation="toolbar-navigation" data-aura-nb-page="{{nbPage}}"></div>
 <div data-aura-widget="toolbar" data-aura-navigation="toolbar-navigation-require"></div>
 <div data-aura-widget="viewport"></div>
