--- a/app/widgets/toolbar/toolbar.hbs
+++ b/app/widgets/toolbar/toolbar.hbs
@@ -1,10 +1,9 @@
+{{#if doc}}
+{{doc.name}}
 <div data-aura-widget="toolbar-download"></div>
-
-<div data-aura-widget="{{navigation}}"
-{{#if nbPage}}
-	 data-aura-nb-page="{{nbPage}}"
-{{/if}}
-></div>
-
+<div data-aura-widget="toolbar-navigation"></div>
 <div data-aura-widget="toolbar-display"></div>
 <div class='pop_up'></div>
+{{else}}
+  Loading...
+{{/if}}
